<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menuopciones.acerca_de">
    <include android:id="@+id/acvd"
        layout="@layout/action_barg">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAD1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/titulo"
                android:textSize="@dimen/acerca"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvAD2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/intro"
                android:textAlignment="gravity"
                android:textSize="@dimen/textog"
                />
            <ImageView
                android:id="@+id/ivFoto"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:scaleType="centerCrop"
                android:src="@drawable/dsc_22451"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/tvAD3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/autor"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="@dimen/nombrea"
                />
            <TextView
                android:id="@+id/tvAD4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/descripcion"
                android:textAlignment="gravity"
                android:textSize="@dimen/textog"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>